# pihole-exporter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: create-release.yml  docker-publish.yml
helm/: Chart.yaml  README.md  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  service.yaml  servicemonitor.yaml
pihole_exporter/: client.py  collector.py  logger.py  main.py  settings.py
tests/: conftest.py  test_client.py  test_collector.py  test_main.py  test_settings.py
